--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             background-color: black;
@@ -11,8 +11,14 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
 
             height: 97vh;
+
+            /*background-shorthand
+            color > image > position > repeat > [size] > attachment
+            
+            background: black url() center top no-repeat cover fixed*/
         }
 
         main {
