--- a/Exercicios/ex024/iframe03.html
+++ b/Exercicios/ex024/iframe03.html
@@ -23,7 +23,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea harum, necessitatibus praesentium nihil facilis quod, eveniet at earum nesciunt sint eum commodi. Alias sequi totam incidunt ut iste, quis impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quasi. Amet a perspiciatis ex alias aliquid iusto saepe suscipit cupiditate facilis deleniti harum nesciunt incidunt ea sunt, quas magnam fuga.</p>
 
-    <iframe name="frame"  src="" ></iframe>
+    <iframe name="frame"  srcdoc="<h1>Escolha uma das opções acima </h1> <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel nam, deleniti corrupti, tempore provident voluptatibus voluptatum libero repellendus nobis iusto omnis voluptas, aliquam pariatur eum? Deserunt accusantium repellat consequuntur necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt dignissimos eaque porro illum. Laudantium, porro ipsum voluptatem nobis, deleniti sequi dicta aut fugit necessitatibus excepturi, rem temporibus iste reprehenderit quibusdam.</p> <img src='imagens/Tux-chelsea250.png'>"><p>Infelizmente seu navegador não reconhece esse recurso</p></iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias quos dolore reprehenderit voluptatum, expedita possimus id commodi quia odit, minus unde eligendi voluptas nobis quisquam! Aut corrupti cumque non quaerat!</p>
 
