--- a/Exercicios/ex025/form03.html
+++ b/Exercicios/ex025/form03.html
@@ -48,7 +48,7 @@
         <p>
             <label for="ihora">Horário de prova:</label>
             <input type="time" name="hora" id="ihora" value="14:30">
-            <!-- type timw - uma caixa para definir horario -->
+            <!-- type time - uma caixa para definir horario -->
         </p>
 
         <p>
